schools/force-app/main/default/objects/Category__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>