schools/force-app/main/default/objects/Category__c/fields/School_ID__c.field-meta.xml
<CustomField>
    <fullName>School_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School ID</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>