schools/force-app/main/default/objects/Category__c/fields/Teacher_ID__c.field-meta.xml
<CustomField>
    <fullName>Teacher_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher ID</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>